--- a/source/_static/stylesheets/link.css
+++ b/source/_static/stylesheets/link.css
@@ -1,12 +1,13 @@
-a {
-    text-decoration: none;
-    font-weight: bold;
-    color: #000;
-}
 .reference.external:after {
     content: "";
     display: inline-block;
-    background: url("/source/_static/icons/external-link.png") no-repeat top right;
+    background: url("/source/_static/icons/external-link-icon.png") no-repeat top right;
     width: 14px;
     height: 12px;
 }
+
+/* a {
+    text-decoration: none;
+    font-weight: bold;
+    color: #000;
+} */
