--- a/source/_static/stylesheets/link.css
+++ b/source/_static/stylesheets/link.css
@@ -1,13 +1,7 @@
-.reference.external:after {
+a.reference.external:after {
     content: "";
     display: inline-block;
     background: url("/source/_static/icons/external-link-icon.png") no-repeat top right;
     width: 14px;
     height: 12px;
 }
-
-/* a {
-    text-decoration: none;
-    font-weight: bold;
-    color: #000;
-} */
