--- a/source/_static/stylesheets/link.css
+++ b/source/_static/stylesheets/link.css
@@ -1,1 +1,1 @@
-a.reference.external:after{font-family:FontAwesome;content:"\f08e";color:#b3b3b3;vertical-align:super;font-size:60%;margin:0 .2em}
+a.reference.external:after{font-family:FontAwesome;content:"\f08e";color:#e74c3c;vertical-align:super;font-size:60%;margin:0 .2em}
